Sun Jan 30 12:51:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.h:
          Fixed fuzz error

Sat Jan 29 23:58:18 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* examples/AMH/Sink_Server/AMH_Servant.cpp:
	* examples/Event_Comm/Consumer_Input_Handler.h:
	* examples/POA/POA_BiDir/POA_BiDir.cpp:
	* examples/RTCORBA/Activity/Activity.cpp:
	* examples/Simple/time-date/server.cpp:
	* orbsvcs/FT_ReplicationManager/FT_DefaultFaultAnalyzer.cpp:
	* orbsvcs/FT_ReplicationManager/FT_FaultEventDescriptor.cpp:
	* orbsvcs/FTRT_Event_Service/Gateway_Service/FTRTEC_Gateway_Service.cpp:
	* orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.h:
	* orbsvcs/Fault_Notifier/FT_Notifier_i.h:
	* orbsvcs/ImplRepo_Service/Activator_Info.h:
	* orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:
	* orbsvcs/LoadBalancer/LoadMonitor.cpp:
	* orbsvcs/TAO_Service/TAO_Service.cpp:
	* orbsvcs/orbsvcs/CosEvent/CEC_Default_Factory.h:
	* orbsvcs/orbsvcs/Event/EC_Default_Factory.h:
	* orbsvcs/orbsvcs/FtRtEvent/EventChannel/FtEventServiceInterceptor.cpp:
	* orbsvcs/orbsvcs/FtRtEvent/EventChannel/GroupInfoPublisher.h:
	* orbsvcs/orbsvcs/IFRService/AliasDef_i.cpp:
	* orbsvcs/orbsvcs/IFRService/ArrayDef_i.cpp:
	* orbsvcs/orbsvcs/IFRService/AttributeDef_i.cpp:
	* orbsvcs/orbsvcs/IFRService/ComponentDef_i.cpp:
	* orbsvcs/orbsvcs/IFRService/ConstantDef_i.cpp:
	* orbsvcs/orbsvcs/IFRService/Contained_i.cpp:
	* orbsvcs/orbsvcs/IFRService/Container_i.cpp:
	* orbsvcs/orbsvcs/IFRService/EnumDef_i.cpp:
	* orbsvcs/orbsvcs/IFRService/EventPortDef_i.cpp:
	* orbsvcs/orbsvcs/IFRService/ExceptionDef_i.cpp:
	* orbsvcs/orbsvcs/IFRService/ExtAttributeDef_i.cpp:
	* orbsvcs/orbsvcs/IFRService/ExtValueDef_i.cpp:
	* orbsvcs/orbsvcs/IFRService/HomeDef_i.cpp:
	* orbsvcs/orbsvcs/IFRService/IFR_Service_Utils_T.cpp:
	* orbsvcs/orbsvcs/IFRService/InterfaceAttrExtension_i.cpp:
	* orbsvcs/orbsvcs/IFRService/InterfaceDef_i.cpp:
	* orbsvcs/orbsvcs/IFRService/NativeDef_i.cpp: